--- a/maromba-web/package.json
+++ b/maromba-web/package.json
@@ -14,6 +14,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
     "sort-by": "^0.0.2"
   },
