--- a/maromba-web/package.json
+++ b/maromba-web/package.json
@@ -13,14 +13,17 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
